bundled_metadata/force-app/main/default/objects/UoM__c/UoM__c.object-meta.xml
<CustomObject>
    <label>UoM</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UoM</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>