bundled_metadata/force-app/main/default/objects/UoM__c/fields/EAN_Code__c.field-meta.xml
<CustomField>
    <fullName>EAN_Code__c</fullName>
    <label>EAN Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>