bundled_metadata/force-app/main/default/objects/UoM__c/fields/Length_Width_UoM__c.field-meta.xml
<CustomField>
    <fullName>Length_Width_UoM__c</fullName>
    <label>Length Width UoM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>