bundled_metadata/force-app/main/default/objects/UoM__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>UoM</relationshipLabel>
    <relationshipName>UoM</relationshipName>
    <type>Lookup</type>
</CustomField>