bundled_metadata/force-app/main/default/objects/UoM__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>UoM Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
                <label>Each</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Case</label>
            </value>
            <value>
                <fullName>PAL</fullName>
                <label>Pallet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>