bundled_metadata/force-app/main/default/objects/UoM__c/fields/UoM_Code__c.field-meta.xml
<CustomField>
    <fullName>UoM_Code__c</fullName>
    <label>UoM Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>