bundled_metadata/force-app/main/default/objects/UoM__c/fields/Volume_UoM__c.field-meta.xml
<CustomField>
    <fullName>Volume_UoM__c</fullName>
    <label>Volume UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>