bundled_metadata/force-app/main/default/objects/UoM__c/fields/Weight_UoM__c.field-meta.xml
<CustomField>
    <fullName>Weight_UoM__c</fullName>
    <label>Weight UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>